tests/spec/parse/snapshots/function_with_nested_function.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn outer() {
    fn inner(x: int) -> int {
      return x * 2;
    };
  
    inner(5);
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "outer",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 5,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Function {
                        doc: None,
                        attributes: [],
                        name: "inner",
                        name_span: Span {
                            file_id: 0,
                            byte_offset: 19,
                            byte_length: 5,
                        },
                        generics: [],
                        params: [
                            Binding {
                                pattern: Identifier {
                                    identifier: "x",
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 25,
                                        byte_length: 1,
                                    },
                                    binding: None,
                                },
                                annotation: Some(
                                    Constructor {
                                        name: "int",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 28,
                                            byte_length: 3,
                                        },
                                    },
                                ),
                                ty: Var {
                                    id: uninferred,
                                },
                            },
                        ],
                        return_annotation: Constructor {
                            name: "int",
                            params: [],
                            span: Span {
                                file_id: 0,
                                byte_offset: 36,
                                byte_length: 3,
                            },
                        },
                        return_type: Var {
                            id: uninferred,
                        },
                        visibility: Private,
                        body: Definition(
                            Block {
                                items: [
                                    Return {
                                        expression: Binary {
                                            operator: Multiplication,
                                            left: Identifier {
                                                value: "x",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 53,
                                                    byte_length: 1,
                                                },
                                                resolution: Unresolved,
                                            },
                                            right: Literal {
                                                literal: Integer {
                                                    value: 2,
                                                    text: None,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 57,
                                                    byte_length: 1,
                                                },
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 53,
                                                byte_length: 5,
                                            },
                                        },
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 46,
                                            byte_length: 12,
                                        },
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 40,
                                    byte_length: 23,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 16,
                            byte_length: 47,
                        },
                    },
                    Call {
                        expression: Identifier {
                            value: "inner",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 68,
                                byte_length: 5,
                            },
                            resolution: Unresolved,
                        },
                        args: [
                            Literal {
                                literal: Integer {
                                    value: 5,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 74,
                                    byte_length: 1,
                                },
                            },
                        ],
                        spread: None,
                        type_arguments: None,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 68,
                            byte_length: 8,
                        },
                        call_kind: Unresolved,
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 67,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 78,
        },
    },
]
