tests/spec/parse/snapshots/generic_enum_multiple.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Result<T, E> {
    Ok(T),
    Err(E),
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Result",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 13,
                    byte_length: 1,
                },
            },
            Generic {
                name: "E",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 1,
                },
            },
        ],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Ok",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 23,
                    byte_length: 2,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "T",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 26,
                                    byte_length: 1,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Err",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 32,
                    byte_length: 3,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "E",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 1,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 40,
        },
    },
]
