tests/spec/parse/snapshots/generic_enum_single.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Option<T> {
    Some(T),
    None,
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Option",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 6,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 13,
                    byte_length: 1,
                },
            },
        ],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Some",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 20,
                    byte_length: 4,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "T",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 25,
                                    byte_length: 1,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "None",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 31,
                    byte_length: 4,
                },
                fields: Unit,
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 37,
        },
    },
]
