tests/spec/parse/snapshots/generic_impl.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  impl<T> Box<T> {
    fn new(value: T) -> Box<T> {
      return Box { value };
    }
  }
---
[
    ImplBlock {
        annotation: Constructor {
            name: "Box",
            params: [
                Constructor {
                    name: "T",
                    params: [],
                    span: Span {
                        file_id: 0,
                        byte_offset: 13,
                        byte_length: 1,
                    },
                },
            ],
            span: Span {
                file_id: 0,
                byte_offset: 9,
                byte_length: 6,
            },
        },
        receiver_name: "Box",
        methods: [
            Function {
                doc: None,
                attributes: [],
                name: "new",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 23,
                    byte_length: 3,
                },
                generics: [],
                params: [
                    Binding {
                        pattern: Identifier {
                            identifier: "value",
                            span: Span {
                                file_id: 0,
                                byte_offset: 27,
                                byte_length: 5,
                            },
                            binding: None,
                        },
                        annotation: Some(
                            Constructor {
                                name: "T",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 34,
                                    byte_length: 1,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                    },
                ],
                return_annotation: Constructor {
                    name: "Box",
                    params: [
                        Constructor {
                            name: "T",
                            params: [],
                            span: Span {
                                file_id: 0,
                                byte_offset: 44,
                                byte_length: 1,
                            },
                        },
                    ],
                    span: Span {
                        file_id: 0,
                        byte_offset: 40,
                        byte_length: 6,
                    },
                },
                return_type: Var {
                    id: uninferred,
                },
                visibility: Private,
                body: Definition(
                    Block {
                        items: [
                            Return {
                                expression: StructCall {
                                    name: "Box",
                                    field_assignments: [
                                        StructFieldAssignment {
                                            name: "value",
                                            name_span: Span {
                                                file_id: 0,
                                                byte_offset: 66,
                                                byte_length: 5,
                                            },
                                            value: Identifier {
                                                value: "value",
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 66,
                                                    byte_length: 5,
                                                },
                                                resolution: Unresolved,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 60,
                                        byte_length: 13,
                                    },
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 53,
                                    byte_length: 20,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 47,
                            byte_length: 31,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 20,
                    byte_length: 58,
                },
            },
        ],
        generics: [
            Generic {
                name: "T",
                bounds: [],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 6,
                    byte_length: 1,
                },
            },
        ],
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 79,
        },
    },
]
