tests/spec/parse/snapshots/generic_multiple_bounds.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn process<T: Display + Clone>(value: T) -> T {
    return value;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "process",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 7,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [
                    Constructor {
                        name: "Display",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 7,
                        },
                    },
                    Constructor {
                        name: "Clone",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 25,
                            byte_length: 5,
                        },
                    },
                ],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 18,
                },
            },
        ],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "value",
                    span: Span {
                        file_id: 0,
                        byte_offset: 32,
                        byte_length: 5,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 39,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "T",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 45,
                byte_length: 1,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Return {
                        expression: Identifier {
                            value: "value",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 58,
                                byte_length: 5,
                            },
                            resolution: Unresolved,
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 51,
                            byte_length: 12,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 47,
                    byte_length: 19,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 65,
        },
    },
]
