tests/spec/parse/snapshots/generic_multiple_params_with_bounds.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn compare<T: Display, U: Debug>(x: T, y: U) -> bool {
    return true;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "compare",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 7,
        },
        generics: [
            Generic {
                name: "T",
                bounds: [
                    Constructor {
                        name: "Display",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 7,
                        },
                    },
                ],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 10,
                },
            },
            Generic {
                name: "U",
                bounds: [
                    Constructor {
                        name: "Debug",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 27,
                            byte_length: 5,
                        },
                    },
                ],
                resolved_bounds: [],
                span: Span {
                    file_id: 0,
                    byte_offset: 24,
                    byte_length: 8,
                },
            },
        ],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "x",
                    span: Span {
                        file_id: 0,
                        byte_offset: 34,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "T",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 37,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
            Binding {
                pattern: Identifier {
                    identifier: "y",
                    span: Span {
                        file_id: 0,
                        byte_offset: 40,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "U",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 43,
                            byte_length: 1,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Constructor {
            name: "bool",
            params: [],
            span: Span {
                file_id: 0,
                byte_offset: 49,
                byte_length: 4,
            },
        },
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Return {
                        expression: Literal {
                            literal: Boolean(
                                true,
                            ),
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 65,
                                byte_length: 4,
                            },
                        },
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 58,
                            byte_length: 11,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 54,
                    byte_length: 18,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 71,
        },
    },
]
